kyverno-policies/clusterpolicies/drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      foreach:
      - list: "request.object.spec.containers[]"
        patchStrategicMerge:
          element:
            securityContext:
              runAsNonRoot: true
              capabilities:
                drop:
                - ALL
  - name: initcontainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      foreach:
      - list: "request.object.spec.initContainers[]"
        patchStrategicMerge:
          element:
            securityContext:
              runAsNonRoot: true
              capabilities:
                drop:
                - ALL
